# mecademic-ros2

./: .gitignore  LICENSE  README.md
Documentation/: Guide-to-ROS2.md
meca_ws/: meca_setup.sh
meca_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
meca_ws/src/custom_interfaces/msg/: GripperStatus.msg  MotionPlan.msg  RobotStatus.msg
meca_ws/src/custom_interfaces/srv/: GetMotionPlan.srv  MoveGripper.srv  MoveJoints.srv  SetBlending.srv  SetGripperForce.srv  SetGripperVel.srv  SetJointAcc.srv  SetJointVel.srv  VisualizeMotionPlan.srv
meca_ws/src/meca_controller/: package.xml  setup.cfg  setup.py
meca_ws/src/meca_controller/meca_controller/: meca_control.py  meca_driver.py  meca_settings.py  tests_meca_control.py
meca_ws/src/meca_motion_planner/: package.xml  setup.cfg  setup.py
meca_ws/src/meca_motion_planner/meca_motion_planner/: bidirectional_rrt.py  motion_planner.py  robot_model.py  shortcutting.py
meca_ws/src/resources/environment/: environment.urdf
meca_ws/src/resources/environment/meshes/: 0.25_inch_steel_nut.stl  1125mm_construction_rail.stl  375mm_construction_rail.stl  Power supply simple.stl  XE25L375_M.stl  XE25L450_M.stl  construction_cube.stl  drop_in_T_nut.stl  gusset_plate.stl  hammerhead_screw.stl  low_profile_T_nut.stl  right_angle_bracket.stl
meca_ws/src/resources/gripper_fingers/: 2mm.prt  5.5mm.prt  Gripper_Finger_Origin_Centered_Nostep_5.5mm.STEP  Gripper_Finger_Origin_Centered_Nostep_5.5mm.STL  Nostep_2mm.stp  Nostep_5.5mm.stp  StairL.prt  StairR.prt  Stairstep_L.stp  Stairstep_R.stp  base.prt
meca_ws/src/resources/meca/: meca.urdf
meca_ws/src/resources/meca/meshes/: Gripper.stl  meca_finger.stl  (+2 more)
